# blink-detector

./: 12_23.py  Eye closure detect method  NEW System.py  Python Project FULL.py  README.md  System.py  activity_inactivity_engine.py  ai_engine.py  allansystem.py  cascade.py  dev_log.txt  ewew.txt.pub  eyes_blink_engine.py  eyes_tracker.py  eyes_tracker_app.py  gaze.py  gptlog.txt  main.py  mouse_keyboard_tracker.py  simulate_data.py  system_v0.2.py  system_v0.25.py  traversal.sh  video_capture.py
archive/eyes_rest/: README.md  mouse_keyboard_tracker.py
class/tutorial/: ai_introduction.py
classes/: 10_23.py  12_23.py  answers.py  ocr.py
classes/notes/: 11_23.py  9_23.py
legacy/: System.py  cascade.py  config.json  data_processor.py  eye_tracker.py  eye_tracker_app.py  eye_tracker_app_.py  gptlog.txt  gradio_fl.py  gradio_test.py  gradio_test_.py  mm.py  scripts.py  system_v0.1.py  system_v0.2.py  web_scrape.ipynb
legacy/eyes_rest-main/: activity_inactivity_engine.py  eyes_blink_engine.py  eyes_tracker.py  (+2 more)
legacy/qt_dlib/: CMakeLists.txt  op_flow.py  utils.py
legacy/qt_dlib/archive/eyes_rest/: eyes_blink_engine.py  eyes_tracker.py  main.py
legacy/qt_dlib/archive/eyes_rest/test/: test_activity_inactivity_engine.py
legacy/qt_dlib/archive/eyes_rest/tutorial/: utils.py
legacy/qt_dlib/src/: EyeTracker.cpp  EyeTracker.h
qt_dlib/: cascade.py  engine.py  grid_gui.py  gui.py  main .py  main.py  merge_sort.c  optical_flow.py  scripts.py
simulation/: simulate_data.py
test/: test_simulate_data.py  test_tracker.py
tests/: test_ai_engine.py
(+7 files in other folders)
